<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PathFinder.Standard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context="com.example.android.herobuilder_mvp.PathFinder.view.AbilitiesFragment">

    <!-- Ability Scores -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ability_scores_header"
            style="@style/PathFinder.Standard.Header"/>

        <!-- Strength -->

        <include android:id="@+id/strength" layout="@layout/reus_component_attribute" />

        <!-- Dexterity -->

        <include android:id="@+id/dexterity" layout="@layout/reus_component_attribute" />

        <!-- Constitution -->

        <include android:id="@+id/constitution" layout="@layout/reus_component_attribute" />

        <!-- Intelligence -->

        <include android:id="@+id/intelligence" layout="@layout/reus_component_attribute" />

        <!-- Wisdom -->

        <include android:id="@+id/wisdom" layout="@layout/reus_component_attribute" />

        <!-- Charisma -->

        <include android:id="@+id/charisma" layout="@layout/reus_component_attribute" />

    </LinearLayout>

    <!-- Calculated Attributes -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Attack Bonuses -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attack_bonus_header"
            style="@style/PathFinder.Standard.Header"/>

        <TextView
            android:id="@+id/attack_bonus_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attack_bonus_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/melee_attack_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/melee_attack_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/ranged_attack_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranged_attack_label"
            style="@style/PathFinder.Standard.Label"/>

        <!-- Combat Maneuvers -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combat_maneuvers_header"
            style="@style/PathFinder.Standard.Header"/>

        <TextView
            android:id="@+id/cmb_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cm_bonus_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/cmd_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cm_defense_label"
            style="@style/PathFinder.Standard.Label"/>

        <!-- Armor Class -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/armor_class_header"
            style="@style/PathFinder.Standard.Header"/>

        <TextView
            android:id="@+id/armor_class_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/armor_class_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/touch_ac_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/touch_ac_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/flatfooted_ac_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flatfooted_ac_label"
            style="@style/PathFinder.Standard.Label"/>

        <!-- Defenses -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defenses_header"
            style="@style/PathFinder.Standard.Header"/>

        <TextView
            android:id="@+id/fortitude_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fortitude_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/reflex_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reflex_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/willpower_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/willpower_label"
            style="@style/PathFinder.Standard.Label"/>

        <!-- Miscellaneous -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miscellaneous_header"
            style="@style/PathFinder.Standard.Header"/>

        <TextView
            android:id="@+id/initiative_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initiative_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/hit_point_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hit_points_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/speed_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_label"
            style="@style/PathFinder.Standard.Label"/>

        <TextView
            android:id="@+id/encumbrance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encumbrance_label"
            style="@style/PathFinder.Standard.Label"/>

    </LinearLayout>
</LinearLayout>
